# cookiecutter-hatch-pypackage

./: .gitignore  LICENSE  README.md  cookiecutter.json  demo.tape
hooks/: post_gen_project.py
{{cookiecutter.dist_name}}/: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.dist_name}}/.github/workflows/: build.yml  documentation.yml  tests.yml
{{cookiecutter.dist_name}}/docs/: authors.md  license.md
{{cookiecutter.dist_name}}/docs/scripts/: gen_ref_nav.py
{{cookiecutter.dist_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __version__.py
{{cookiecutter.dist_name}}/tests/: test_add.py
