[project]
name = "{{ cookiecutter.dist_name }}"
authors = [
  { name = "{{ cookiecutter.dist_name }}", email = "{{ cookiecutter.email }}" }
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
]

[project.urls]
Documentation = "{{ cookiecutter.docs_url }}"
Source = "{{ cookiecutter.repository_url }}"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
# Change this if the version is in a different place
path = "{{ cookiecutter.package_name }}/__init__.py"


[tool.mypy]
files = ["{{cookiecutter.package_name}}"]
exclude = ["build/", "dist/", "docs/", "tests/*"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
{% if cookiecutter.pydantic == "Y" -%}
  plugins = ["pydantic.mypy"]
{%- endif %}


[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace(".", "") }}"
line-length = 120
[tool.ruff.lint]
extend-select = ["I"]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105",
    "S106",
    "S107",
    # Ignore complexity
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]

[tool.pytest.ini_options]
addopts = "--cov={{ cookiecutter.package_name }}/ --cov-report=term-missing"
{% if cookiecutter.asyncio == "Y" -%}
  asyncio_mode = "strict"
{%- endif %}


[tool.hatch.envs.default]
dependencies = [
  "pytest",
  {% if cookiecutter.codecov == "Y" -%}
    "pytest-cov"
  {% endif -%}
  {% if cookiecutter.asyncio == "Y" -%}
    "pytest-asyncio",
    {%- endif %}
  {% if cookiecutter.deptry == "Y" -%}
    "deptry",
  {% endif -%}
    "mypy",
    "ruff",
    "pre-commit",
    "tox"
  {% if cookiecutter.mkdocs == "Y" -%}
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
  {%- endif %}
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff --fix .",
  "mypy {{ cookiecutter.package_name }}/",
]
lint-check = [
  "ruff format --check .",
  "ruff .",
  "mypy {{ cookiecutter.package_name }}/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

# Testing env endencies
[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
]


[[tool.hatch.envs.test.matrix]]
python = ["{{ cookiecutter.python_version }}"]

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.package_name }}/"]